--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -6,5 +6,23 @@
 </head>
 <body>
 <h1 th:text="'List of Owners'">List of Owners...</h1>
+
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="owner : ${owners}">
+        <td th:text="${owner.id}">error</td>
+        <td th:text="${owner.firstName}">error</td>
+        <td th:text="${owner.lastName}">error</td>
+    </tr>
+    </tbody>
+</table>
+
 </body>
 </html>
