--- a/pet-clinic-web/src/main/resources/templates/fragments/selectField.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/selectField.html
@@ -2,24 +2,24 @@
 <body>
 <form>
     <th:block th:fragment="select (label, name, items)">
-        <div th:with="valid=${!#fields.hasErrors(name)}"
+        <div class="form-group"
              th:class="${'form-group' + (valid ? '' : ' has-error')}"
-             class="form-group">
+             th:with="valid=${!#fields.hasErrors(name)}">
             <label class="col-sm-2 control-label" th:text="${label}">Label</label>
 
             <div class="col-sm-10">
                 <select th:field="*{__${name}__}">
-                    <option th:each="item : ${items}" th:value="${item}"
-                            th:text="${item}">dog
+                    <option th:each="item : ${items}" th:text="${item}"
+                            th:value="${item}">dog
                     </option>
                 </select>
-                <span th:if="${valid}"
+                <span aria-hidden="true"
                       class="glyphicon glyphicon-ok form-control-feedback"
-                      aria-hidden="true"></span>
+                      th:if="${valid}"></span>
                 <th:block th:if="${!valid}">
             <span
-                    class="glyphicon glyphicon-remove form-control-feedback"
-                    aria-hidden="true"></span>
+                    aria-hidden="true"
+                    class="glyphicon glyphicon-remove form-control-feedback"></span>
                     <span class="help-inline" th:errors="*{__${name}__}">Error</span>
                 </th:block>
             </div>
