--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" th:replace="~{fragments/layout :: layout (~{::body},'vets')}" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>List of Vets</title>
 </head>
 <body>
-<h2 th:text="'List of Vets'">List of Vets...</h2>
+<!--/*@thymesVar id="vet" type="guru.springframework.sfgpetclinic.model.Vet"*/-->
+<h2>Veterinarians</h2>
 
-<table class="table table-striped">
+<table class="table table-striped" id="vets">
     <thead>
     <tr>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th>Name</th>
+        <th>Specialties</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="vet : ${vets}">
-        <td th:text="${vet.id}">error</td>
-        <td th:text="${vet.firstName}">error</td>
-        <td th:text="${vet.lastName}">error</td>
+        <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+        <td>
+            <span th:each="specialty : ${vet.specialities}"
+                  th:text="${specialty.description + ' '}"></span>
+            <span th:if="${vet?.specialities?.size() == 0}">none</span>
+        </td>
     </tr>
     </tbody>
 </table>
-
 </body>
 </html>
