--- a/pet-clinic-web/src/main/resources/templates/error.html
+++ b/pet-clinic-web/src/main/resources/templates/error.html
@@ -3,9 +3,9 @@
 <html th:replace="~{fragments/layout :: layout (~{::body},'error')}" xmlns:th="https://www.thymeleaf.org">
 
 <body>
-<img src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
-<h2>Something happened...</h2>
-<p th:text="${message}">Exception message</p>
+<img class="center-block" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
+<h2 style="text-align: center">Something happened...</h2>
+<p style="text-align: center" th:text="${message}">Exception message</p>
 </body>
 
 </html>
