--- a/pet-clinic-web/src/main/resources/templates/fragments/layout.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/layout.html
@@ -10,7 +10,7 @@
 
     <link rel="shortcut icon" th:href="@{/resources/images/favicon.png}" type="image/x-icon">
 
-    <title>PetClinic :: a Spring Framework demonstration</title>
+    <title>PetClinic</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -35,8 +35,8 @@
             </button>
         </div>
         <div class="navbar-collapse collapse" id="main-navbar">
-            <ul class="nav navbar-nav navbar-right">
 
+            <ui class="navbar-nav me-auto mb-2 mb-lg-0" th:remove="all">
                 <li class="active" th:class="${active==menu ? 'active' : ''}"
                     th:fragment="menuItem (path,active,title,glyph,text)">
                     <a th:href="@{__${path}__}" th:title="${title}">
@@ -45,6 +45,9 @@
                         <span th:text="${text}">Template</span>
                     </a>
                 </li>
+            </ui>
+
+            <ul class="nav navbar-nav navbar-right">
 
                 <li th:replace="::menuItem ('/','home','home page','home','Home')">
                     <span aria-hidden="true" class="glyphicon glyphicon-home"></span>
